--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,1 +1,2 @@
-{% extends "blog/base.html" %} {% block content %} {% endblock content %}
+{% extends "blog/base.html" %} {% block content %} <h1> About page
+  {% endblock content %}
