--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,11 +1,13 @@
-{% extends "blog/base.html" %} {% block content %}
+{% extends "blog/base.html" %} 
+{% load crispy_forms_tags %}
+{% block content %}
 
 <div class="container">
   <form method="POST">
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Register</legend>
-      {{ form.as_p }}
+      {{ form|crispy }}
       
 
 
