--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -18,7 +18,7 @@
   </form>
   <div class="border-top pt-3">
 <small class="text-muted">
-Already have an account <a class="ml-2" href='#'>Sign in </a>
+  Already have an account <a class="ml-2" href="#">Sign in </a>
 </small>
 </div>
    </div> 
