--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -33,8 +33,15 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="#">Login</a>
+              {% if user.is_authenticated %}
+            <form method="post" action="{% url 'logout' %}" style="display:inline;">
+              {% csrf_token %}
+                <button type="submit" class="nav-item nav-link btn btn-link" style="padding:0; border:none; background:none;">Logout</button>
+            </form>
+              {% else %}
+              <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
               <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+              {%endif%}
             </div>
           </div>
         </div>
