all basic functionality prepared almost over

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -42,7 +42,8 @@
       <button type="submit" class="nav-item nav-link btn btn-link m-0 p-0 me-2" style="border:none; background:none;">Logout  </button>
     </form>
 </div>
-    <a class="nav-item nav-link btn btn-link m-0 p-0" style="border:none; background:none;" href="{% url 'profile' %}">Profile</a>
+    <a class="nav-item nav-link btn btn-link m-0 p-0" style="border:none; background:none;" href="{% url 'profile' %}">Profile  </a>
+    <a class="nav-item nav-link btn btn-link m-0 p-0" style="border:none; background:none;" href="{% url 'post-create' %}"> Create Post</a>
   </div>
 {% else %}
   <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
