--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,6 +9,13 @@
     <div class="article-metadata">
       <a class="mr-2" href="#">{{ object.author }}</a>
       <small class="text-muted">{{ object.date|date:"P · M j, y"}}</small>
+      {% if object.author == user %}
+      <div>
+      <a class ="btn btn-danger btn-sm mt-1 mb-1"href="{% url 'post-delete' object.id %}">Delete post </a>
+      <a class="btn btn-seconadary btn-sm mt-1 mb-1 "href="{% url 'post-update' object.id %}">Edit Post</a>
+      </div>
+      {% endif %}
+
     </div>
     <h2 class="article-title">{{ object.title }}</h2>
     <p class="article-content">{{ object.content }}</p>
