--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,7 @@
   />
   <div class="media-body">
     <div class="article-metadata">
-      <a class="mr-2" href="#">{{ object.author }}</a>
+      <a class="mr-2" href="{% url 'user-posts' object.author.username %} ">{{ object.author }}</a>
       <small class="text-muted">{{ object.date|date:"P · M j, y"}}</small>
       {% if object.author == user %}
       <div>
