--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,7 +5,10 @@
         <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" alt="">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="#">{{ post.author }}</a>
+
+      <a class="mr-2" href="{% url 'user-posts' post.author.username %}"
+        >{{ post.author }}</a
+      >
               <small class="text-muted">{{ post.date|date:"P · M j, y"}}</small>
 
             </div>
